@@ -110,7 +110,13 @@ SCIP_Bool SCIPsolveIsStopped(
    else if( checknodelimits && set->limit_stallnodes >= 0 && stat->nnodes >= stat->bestsolnode + set->limit_stallnodes )
       stat->status = SCIP_STATUS_STALLNODELIMIT;
 
-   return (stat->status != SCIP_STATUS_UNKNOWN);
+   /* If stat->status was initialized to SCIP_STATUS_NODELIMIT or SCIP_STATUS_STALLNODELIMIT due to a previous call to SCIPsolveIsStopped(,,TRUE),
+    * in the case of checknodelimits == FALSE, we do not want to report here that the solve will be stopped due to a nodelimit.
+    */
+   if( !checknodelimits )
+      return (stat->status != SCIP_STATUS_UNKNOWN && stat->status != SCIP_STATUS_NODELIMIT && stat->status != SCIP_STATUS_STALLNODELIMIT);
+   else
+      return (stat->status != SCIP_STATUS_UNKNOWN);
 }
 
 /** calls primal heuristics */
